--- a/frontend/styles/Home.module.css
+++ b/frontend/styles/Home.module.css
@@ -1,8 +1,8 @@
 .container {
-  min-height: 100vh;
+  /* min-height: 100vh;
   padding: 0 0.5rem;
   display: flex;
-  flex-direction: column;
+  flex-direction: column; */
   /* justify-content: center; */
   /* align-items: center; */
 }
