--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -1,9 +1,20 @@
+@import url("https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;1,400;1,500;1,600&family=Montserrat:ital,wght@0,700;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;1,400&display=swap");
+
 html,
 body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  /* overflow: hidden; */
+}
+
+html,
+body,
+#__next {
+  max-width: 100vw;
+  overflow: hidden;
+  height: 100%;
 }
 
 a {
@@ -13,4 +24,44 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: Lora;
+}
+
+p,
+span,
+a,
+li,
+button,
+input {
+  font-family: Roboto;
+  font-size: 1.125rem;
+}
+
+:root {
+  --header-height: 4rem;
+  --padding-x: 1rem;
+  --padding-y: 1rem;
+}
+
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+input,
+button {
+  border: none;
+  appearance: none;
+  background: transparent;
+  padding: 0;
+  margin: 0;
 }
