--- a/frontend/components/Layout/Layout.module.css
+++ b/frontend/components/Layout/Layout.module.css
@@ -1,3 +1,10 @@
 .wrapper {
   padding: var(--padding-y) var(--padding-x);
+  max-width: var(--container-max-width);
+  margin: 0 auto;
+  width: 100%;
+}
+
+.hero {
+  margin-bottom: calc(var(--padding-y));
 }
