--- a/frontend/components/PageHeader/PageHeader.module.css
+++ b/frontend/components/PageHeader/PageHeader.module.css
@@ -2,10 +2,11 @@
   height: var(--header-height);
   display: flex;
   flex-direction: row;
-  align-items: center;
+  align-items: stretch;
   justify-content: center;
   padding: 0 var(--padding-x);
-  position: relative;
+  /* position: relative; */
+  flex: var(--header-height) 0 0;
 }
 
 .container {
@@ -16,4 +17,6 @@
   align-items: flex-end;
 
   border-bottom: 1px solid hsla(0, 0%, 80%, 1);
+  width: 100%;
+  max-width: var(--container-max-width);
 }
