--- a/frontend/components/SiteNavigation/SiteNavigation.module.css
+++ b/frontend/components/SiteNavigation/SiteNavigation.module.css
@@ -14,9 +14,8 @@
   display: flex;
   flex-direction: row;
 
-  width: 100vw;
+  width: 100%;
   height: 100vh;
-  max-width: 37.5rem;
 
   padding: var(--header-height) var(--padding-x) 0;
 
@@ -26,6 +25,14 @@
   background-color: hsla(0, 100%, 100%, 1);
 
   transition: transform 250ms, opacity 250ms;
+  pointer-events: none;
+  /* max-width: var(--container-max-width); */
+}
+
+.navigation ul {
+  width: 100%;
+  max-width: var(--container-max-width);
+  margin: 0 auto;
 }
 
 .navigation li {
@@ -39,9 +46,20 @@
   text-decoration: underline;
 }
 
+.navigation li a:hover {
+  text-decoration: none;
+}
+
 
 .navigationVisible {
   opacity: 1;
 
   transform: translate3d(0%, 0, 0);
+  pointer-events: all;
+}
+
+@media screen and (min-width: 48.75rem) {
+  .navigation {
+    transform: translate3d(0%, 0, 0);
+  }
 }
