--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -27,6 +27,7 @@ body {
   height: 100%;
 }
 
+/* 
 body {
   background-color: hsla(0, 100%, 100%, 1);
 }
@@ -100,4 +101,4 @@ button {
     --padding-x: 1rem;
     --padding-y: 3rem;
   }
-}
+} */
