Add tailwind layout

--- a/frontend/components/CategoryGrid/CategoryGrid.module.css
+++ b/frontend/components/CategoryGrid/CategoryGrid.module.css
@@ -1,4 +1,4 @@
-.wrapper {
+/* .wrapper {
   padding-top: var(--padding-y);
 }
 
@@ -51,4 +51,4 @@
     margin-right: 2rem;
     margin-bottom: 2rem;
   }
-}
+} */
