--- a/frontend/components/Footer/Footer.module.css
+++ b/frontend/components/Footer/Footer.module.css
@@ -1,4 +1,4 @@
-.wrapper {
+/* .wrapper {
   margin-top: auto;
   height: var(--header-height);
   display: flex;
@@ -16,4 +16,4 @@
   justify-content: center;
   max-width: var(--container-max-width);
 }
-
+ */
