--- a/frontend/components/Layout/Layout.module.css
+++ b/frontend/components/Layout/Layout.module.css
@@ -1,4 +1,4 @@
-.wrapper {
+/* .wrapper {
   padding: var(--padding-y) var(--padding-x);
   max-width: var(--container-max-width);
   margin: 0 auto;
@@ -7,4 +7,4 @@
 
 .hero {
   margin-bottom: calc(var(--padding-y));
-}
+} */
