--- a/frontend/components/Logo/Logo.module.css
+++ b/frontend/components/Logo/Logo.module.css
@@ -1,10 +1,10 @@
-.container,
+/* .container,
 .container * {
   font-family: Montserrat;
   font-weight: 700;
   font-size: 1.25rem;
-}
+} */
 
-.container span:last-of-type {
+/* .container span:last-of-type {
   font-style: italic;
-}
+} */
