--- a/frontend/components/PageHeader/PageHeader.module.css
+++ b/frontend/components/PageHeader/PageHeader.module.css
@@ -1,11 +1,10 @@
-.wrapper {
+/* .wrapper {
   height: var(--header-height);
   display: flex;
   flex-direction: row;
   align-items: stretch;
   justify-content: center;
   padding: 0 var(--padding-x);
-  /* position: relative; */
   flex: var(--header-height) 0 0;
 }
 
@@ -19,4 +18,4 @@
   border-bottom: 1px solid hsla(0, 0%, 80%, 1);
   width: 100%;
   max-width: var(--container-max-width);
-}
+} */
