--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -1,104 +1,26 @@
-@import url("https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;1,400;1,500;1,600&family=Montserrat:ital,wght@0,700;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;1,400&display=swap");
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+/* @import url("https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;1,400;1,500;1,600&family=Montserrat:ital,wght@0,700;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;1,400&display=swap"); */
 
 html,
 body {
-  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  /* overflow: hidden; */
-}
-
-html,
-body {
+  padding: 0;
   max-width: 100vw;
   overflow-x: hidden;
   height: 100%;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 
 #__next {
   display: flex;
   flex-direction: column;
-  /* justify-content: center; */
-  align-items: stretch;
   min-height: 100%;
-  position: relative;
   height: 100%;
-}
+  position: relative;
+} 
 
-/* 
-body {
-  background-color: hsla(0, 100%, 100%, 1);
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  margin-top: 0;
-  font-family: Lora;
-  line-height: 1.15;
-  margin-bottom: .5em;
-}
-
-h1 {
-  font-size: 3rem;
-}
-
-p,
-span,
-a,
-li,
-button,
-input {
-  font-family: Roboto;
-  font-size: 1.125rem;
-}
-
-p {
-  font-weight: 300;
-  line-height: 1.4;
-}
-
-:root {
-  --header-height: 4rem;
-  --padding-x: 1rem;
-  --padding-y: 2rem;
-  --container-max-width: 64rem;
-  --body-text-max-width: 40rem;
-}
-
-ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-input,
-button {
-  border: none;
-  appearance: none;
-  background: transparent;
-  padding: 0;
-  margin: 0;
-}
-
-@media screen and (min-width: 48.75rem) {
-  :root {
-    --header-height: 5rem;
-    --padding-x: 1rem;
-    --padding-y: 3rem;
-  }
-} */
